--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
+header {
+  padding: 20px;
+  border-bottom: 5px dotted #000;
+  background-color: #fff;
   text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+  font-family:'Times New Roman', Times, serif;
+  color: #000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  margin: 20px 0px 40px 0px;
 }
