--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
 header {
-  padding: 20px;
-  border-bottom: 5px dotted #000;
-  background-color: #fff;
+  padding: 50px 0px 75px 0px;
   text-align: center;
-  font-size: 50px;
-  font-weight: bold;
-  font-family:'Times New Roman', Times, serif;
-  color: #000;
+  border-bottom: 5px dotted #333;
+}
+
+header>img {
+  height: 150px;
 }
 
 main {
-  margin: 20px 0px 40px 0px;
+  margin: 10px 0px 40px 0px;
+  padding: 0px 0px 100px 0px;
+  border-bottom: 5px dotted #333;
+}
+
+.content-menu {
+  padding: 10px 0px 15px 0px;
+  margin-bottom: 70px;
+  border-bottom: 5px dotted #333;
+  text-align: center;
 }
