--- a/src/components/RecipeItem.module.css
+++ b/src/components/RecipeItem.module.css
@@ -1,8 +1,9 @@
 /* ITEM WRAP */
 .recipe-item {
     margin-top: 20px;
+    background-color: #fff;
+    border: 2px solid #111;
     padding: 20px;
-    border: 1px solid #111;
     cursor: pointer;
 }
 
